--- a/config/scaffolding/FLOW_TEST_NEWProject.yml
+++ b/config/scaffolding/FLOW_TEST_NEWProject.yml
@@ -16,3 +16,7 @@ services:
   packages:
   - name: WmPublic
     version: 11.0.0.0.873
+- serviceName: project.flow_test_new.integrations:e1
+  packages:
+  - name: FLOW_TEST_NEWProject
+    version: "1.0"
