--- a/config/scaffolding/FLOW_TEST_NEWProject.yml
+++ b/config/scaffolding/FLOW_TEST_NEWProject.yml
@@ -60,3 +60,9 @@ services:
   packages:
   - name: WmPublic
     version: 11.0.0.0.873
+- serviceName: project.flow_test_new.integrations:testPkgDocs
+  packages:
+  - name: FLOW_TEST_NEWProject
+    version: "1.0"
+  - name: PackagesScenario
+    version: "2.0"
