--- a/config/scaffolding/FLOW_TEST_NEWProject.yml
+++ b/config/scaffolding/FLOW_TEST_NEWProject.yml
@@ -68,3 +68,9 @@ services:
     version: "1.0"
   - name: PackagesScenario
     version: "2.0"
+- serviceName: project.flow_test_new.integrations:edgeflow2
+  packages:
+  - name: FLOW_TEST_NEWProject
+    version: "1.0"
+  - name: PackagesScenario
+    version: "2.0"
