--- a/config/scaffolding/FLOW_TEST_NEWProject.yml
+++ b/config/scaffolding/FLOW_TEST_NEWProject.yml
@@ -74,3 +74,13 @@ services:
     version: "1.0"
   - name: PackagesScenario
     version: "2.0"
+- serviceName: project.flow_test_new.integrations:w122
+  packages:
+  - name: FLOW_TEST_NEWProject
+    version: "1.0"
+  - name: PackagesScenario
+    version: "2.0"
+- serviceName: pub.date:calculateDateDifference
+  packages:
+  - name: WmPublic
+    version: 11.0.0.0.922
