--- a/config/scaffolding/FLOW_TEST_NEWProject.yml
+++ b/config/scaffolding/FLOW_TEST_NEWProject.yml
@@ -23,6 +23,11 @@ packages:
   gitUrl: https://github.com/radhikaWarrierSAG
   gitUsername: PoojaAnandGit
   gitBranch: main
+- name: localPkgTest
+  gitServerName: test1
+  gitUrl: https://github.com/PoojaAnandGit
+  gitUsername: PoojaAnandGit
+  gitBranch: main
 services:
 - serviceName: project.flow_test_new.integrations:edgeflow1
   packages:
